# blue-green-demo

./: .env  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/handlers/: index.rs  mod.rs
src/middleware/: error_middleware.rs  mod.rs
static/: stylesheet.css
templates/: error.html  index.html  layout.html
