[package]
name = "blue-green-demo"
version = "1.0.0"
authors = ["vnderlev <vnderlev@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.8"
dotenv = "^0.15.0"
env_logger = "^0.7.1"
awc = "^2.0.0"
actix-rt = "^1.1.1"
actix-web = { version="^3.1.0", features=["rustls"] }
actix-http = "*"
actix-files = "*"
actix-service = "^1.0.6"
futures = "^0.3.6"
serde = "^1.0.110"
serde_json = "^1.0.55"
chrono = { version="0.4.19", features=["serde"] }
tera = "*"